# spacewire

./: Cargo.toml
spacewire/: Cargo.toml
spacewire-cli/: Cargo.toml
spacewire-cli/src/: cli.rs  main.rs
spacewire/src/: error.rs  identity.rs  lib.rs  link.rs  proto.rs  relay.rs
