[package]
name = "spacewire-cli"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spacewire"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
spacewire = { path = "../spacewire" }
