[package]
name = "spacewire"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
log = "0.4"
num_enum = "0.5"
thiserror = "1.0"
ring = "0.16"
tokio = { version = "1.0", features = ["full"] }
